# Forest_Biomass_SSL

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  slurm_requirements.txt
A_preprocessing/: preprocessing_utils.R  s1_extract_plot_point_clouds.R  s2_derive_plot_biomass.Rmd  s3_sample_study_area.Rmd  s4_clip_unlabeled_samples.Rmd  s5_lidar_metric_calculation.Rmd  s6_points_to_np.py
B_analysis/: s1_create_requirements.py  s2_ocnn_pretrain.py  s2_submit_pretrain_job.sh  s3_hp_tuning.py  s4_compare_finetune_scratch.py  s5_random_forest.py  s6_effect_of_train_dataset_size.py
C_inference/: downsample_pred_and_s2_rasters.bat  inference_dataset.py  resample_chm.bat  s0_resample_chm.bat  s1_create_grid.py  s2_apply_model.py  s3_trim_pred_rasters.py  s4_merge_pred_rasters.py  s5_clean_pred_ras.py
models/: ocnn_lenet.py  ocnn_lightning.py  regressor.py
optimal_hyperparameters/: ocnn_lenet_hps.yaml
utils/: data_utils.py  dataset.py  get_model.py  ocnn_utils.py  pd_utils.py  plot_pc_octree.py  test_model.py  train_model.py  train_parallel.py  training_utils.py  visualization.py  wandb_utils.py
